Fix bottom TOC overlapping in low height

--- a/src/App.css
+++ b/src/App.css
@@ -1276,16 +1276,11 @@ input:checked+.sliderMin:before {
 
 .bottomToc {
   position: absolute;
-
-  /* left: 0; 
-  right: 0; 
-  margin-left: auto; 
-  margin-right: auto;  */
-
   bottom: 0;
   padding-bottom: 24px;
   padding-top: 24px;
   border-top: 1px solid var(--muted-text);
+  background-color: var(--elevated-bg);
 }
 
 .tocTitleFirst {
